[package]
name = "winter-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dashmap = "5.5.3"
rand = "0.8.5"
resvg = "0.38.0"
tiny-skia = "0.11.3"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
usvg = "0.38.0"
